done media queries for index.html and added icons for skills

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -99,3 +99,64 @@
    .lightest {
       background: #fcf6c7;
    }
+
+// Media queries
+@media (max-width: 1200px) {
+   .indexHeader .helloDiv .shapes {
+      width: 35%;
+   }
+
+   .indexHeader .seeWork {
+      margin-left: 29.5rem;
+   }
+}
+
+@media (max-width: 1165px) {
+   .indexHeader .helloDiv .shapes .square,
+   .indexHeader .helloDiv .shapes .triangle,
+   .indexHeader .helloDiv .shapes .line,
+   .indexHeader .helloDiv .shapes .circle {
+      animation: none;
+   }
+}
+
+@media (max-width: 1000px) {
+   .indexHeader .seeWork {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 50%;
+      margin: 3rem auto;
+   }
+
+   .indexHeader .helloDiv h1 {
+      padding: 8rem 10rem 1rem 10rem;
+   }
+}
+
+@media (max-width: 865px) {
+   .indexHeader .helloDiv h1 {
+      padding: 8rem 5rem 0 5rem;
+   }
+}
+
+@media (max-width: 640px) {
+   .indexHeader .helloDiv h1 {
+      padding: 5rem 3rem 0 3rem;
+   }
+   
+   .indexHeader .helloDiv .shapes {
+      width: 50%;
+   }
+}
+
+@media (max-width: 450px) {
+   .indexHeader .helloDiv h1 {
+      padding: 5rem 1rem 0 1rem;
+   }
+
+   .indexHeader .helloDiv .shapes {
+      width: 70%;
+   }
+}
+
