--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -26,6 +26,20 @@
       }
    }
 
+   .icons {
+      display: flex;
+      
+      ul {
+         display: flex;
+         margin: 0 auto;
+
+         li {
+            font-size: 1.5rem;
+            padding-right: 2rem;
+         }
+      }
+   }
+
    .verticalAbout {
       writing-mode: vertical-rl;
       color: #fdee69;
