put in icons but commented them out for now

--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -26,19 +26,19 @@
       }
    }
 
-   .icons {
-      display: flex;
+   // .icons {
+   //    display: flex;
       
-      ul {
-         display: flex;
-         margin: 0 auto;
+   //    ul {
+   //       display: flex;
+   //       margin: 0 auto;
 
-         li {
-            font-size: 1.5rem;
-            padding-right: 2rem;
-         }
-      }
-   }
+   //       li {
+   //          font-size: 1.5rem;
+   //          padding-right: 2rem;
+   //       }
+   //    }
+   // }
 
    .verticalAbout {
       writing-mode: vertical-rl;
