--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -155,3 +155,211 @@ footer {
       text-decoration: none;
    }
 }
+
+// Media queries
+@media (max-width: 1300px) {
+   .aboutHeader .bio {
+      margin: 2rem 0;
+   }
+
+   .mainAbout .paraDiv {
+      padding-top: 0;
+      width: 50%;
+   }
+}
+
+@media (max-width: 1100px) {
+   .opacity {
+      opacity: 0;
+   }
+
+   .aboutHeader .verticalAbout {
+      letter-spacing: 2px;
+      margin: 0%;
+   }
+
+   .mainAbout .imgDiv {
+      padding-left: 0;
+   }
+
+   .wrapper {
+      width: 95%;
+   }
+}
+
+@media (max-width: 1040px) {
+   .aboutHeader .bio {
+      flex-direction: column;
+   }
+
+   .aboutHeader .bio .bioImg {
+      width: 60%;
+      margin: 0 auto;
+   }
+
+   .aboutHeader .bio .bioAboutMe {
+      width: 50%;
+      margin: 0 auto;
+   }
+
+   .verticalAbout {
+      opacity: 0;
+   }
+
+   .mainAbout {
+      padding-bottom: 4rem;
+   }
+
+   .mainAbout .paraDiv {
+      width: 80%;
+      padding-top: 4rem;
+      padding-left: 7rem;
+      margin-bottom: 1rem;
+   }
+
+   .mainAbout .imgDiv {
+      width: 50%;
+      margin: 0 auto;
+   }
+
+   .mainAbout .firstProject {
+      margin-bottom: 5rem;
+   }
+
+   .mainAbout .firstProject .imgDiv {
+      margin: 3rem auto;
+   }
+
+   .mainAbout .projects {
+      margin-bottom: 7rem;
+   }
+
+   .mainAbout .projects .imgDiv {
+      margin: 5rem auto;
+   }
+}
+
+@media (max-width: 840px) {
+   .aboutHeader .bio .bioImg {
+      width: 65%;
+   }
+
+   .aboutHeader .bio .bioAboutMe {
+      width: 70%;
+   }
+
+   .mainAbout {
+      padding-top: 3rem;
+   }
+
+   .mainAbout .paraDiv {
+      width: 90%;
+   }
+
+   .mainAbout .imgDiv {
+      width: 60%;
+      bottom: 1rem;
+   }
+
+   .mainAbout .projects .imgDiv {
+      margin: 7rem auto;
+   }
+
+   .mainAbout .firstProject .imgDiv {
+      margin: 2rem auto;
+   }
+}
+
+@media (max-width: 750px) {
+   .mainAbout .paraDiv {
+      width: 100%;
+      padding-left: 5rem;
+   }
+
+   .mainAbout .firstProject .imgDiv {
+      margin: 0rem auto;
+   }
+
+   .mainAbout .projects .imgDiv {
+      margin: 4rem auto;
+   }
+
+   footer {
+      font-size: 1rem;
+   }
+}
+
+@media (max-width: 636px) {
+   .aboutHeader .bio .bioImg {
+      width: 80%;
+   }
+
+   .aboutHeader .bio .bioAboutMe {
+      width: 90%;
+   }
+
+   .mainAbout .firstProject .imgDiv {
+      margin: 3rem auto;
+   }
+
+   .mainAbout .projects .imgDiv {
+      margin: 6rem auto;
+   }
+
+   footer {
+      text-align: center;
+      flex-direction: column;
+   }
+}
+
+@media (max-width: 565px) {
+    .aboutHeader .bio .bioImg {
+      width: 100%;
+   }
+
+   .aboutHeader .bio .bioAboutMe {
+      width: 95%;
+   }
+
+   .mainAbout section {
+      position: relative;
+      left: -2rem;
+   }
+
+   .mainAbout .hDiv h3 {
+      opacity: 0;
+      font-size: 1px;
+   }
+
+   .mainAbout .hDiv .paraContainer {
+      padding-left: 0rem;
+      position: relative;
+      left: -2rem;
+   }
+
+   .mainAbout .paraDiv {
+      padding-left: 3rem;
+   }
+
+   .mainAbout .imgDiv {
+      width: 60%;    
+   }
+
+   .mainAbout .firstProject .imgDiv {
+      margin: 5rem auto;
+   }
+
+   .mainAbout .projects .imgDiv {
+      margin: 10rem auto;
+   }
+}
+
+@media (max-width: 435px) {
+   .mainAbout .projects .imgDiv {
+      margin: 12rem auto;
+   }
+}
+
+// @media (max-width: ) {
+   
+// }
