final final edit

--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -358,8 +358,8 @@ footer {
    .mainAbout .projects .imgDiv {
       margin: 12rem auto;
    }
-}
 
-// @media (max-width: ) {
-   
-// }
+   .mainAbout {
+      padding-top: 8rem;
+   }
+}
