final edit part 3

--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -355,11 +355,15 @@ footer {
 }
 
 @media (max-width: 435px) {
+   .aboutHeader {
+      height: 100%;
+   }
+
    .mainAbout .projects .imgDiv {
       margin: 12rem auto;
    }
 
    .mainAbout {
-      padding-top: 8rem;
+      padding-top: 0;
    }
 }
