--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,7 +464,7 @@ nav ul a {
       flex-wrap: wrap;
   margin-bottom: 2rem;
 }
-.mainAbout .firstProject {
+.mainAbout .projects {
   margin-bottom: 0;
 }
 .mainAbout .hDiv {
@@ -568,6 +568,7 @@ footer a {
 @media (max-width: 1100px) {
   .opacity {
     opacity: 0;
+    font-size: 1px;
   }
 
   .aboutHeader .verticalAbout {
@@ -603,6 +604,7 @@ footer a {
 
   .verticalAbout {
     opacity: 0;
+    font-size: 1px;
   }
 
   .mainAbout {
@@ -621,23 +623,23 @@ footer a {
     margin: 0 auto;
   }
 
-  .mainAbout .firstProject {
+  .mainAbout .projects {
     margin-bottom: 5rem;
   }
 
-  .mainAbout .firstProject .imgDiv {
+  .mainAbout .projects .imgDiv {
     margin: 3rem auto;
   }
 
-  .mainAbout .projects {
+  .mainAbout .projectTwo {
     margin-bottom: 7rem;
   }
 
-  .mainAbout .projects .imgDiv {
+  .mainAbout .projectTwo .imgDiv {
     margin: 5rem auto;
   }
 }
-@media (max-width: 840px) {
+@media (max-width: 888px) {
   .aboutHeader .bio .bioImg {
     width: 65%;
   }
@@ -659,11 +661,11 @@ footer a {
     bottom: 1rem;
   }
 
-  .mainAbout .projects .imgDiv {
+  .mainAbout .projectTwo .imgDiv {
     margin: 7rem auto;
   }
 
-  .mainAbout .firstProject .imgDiv {
+  .mainAbout .projects .imgDiv {
     margin: 2rem auto;
   }
 }
@@ -673,11 +675,11 @@ footer a {
     padding-left: 5rem;
   }
 
-  .mainAbout .firstProject .imgDiv {
+  .mainAbout .projects .imgDiv {
     margin: 0rem auto;
   }
 
-  .mainAbout .projects .imgDiv {
+  .mainAbout .projectTwo .imgDiv {
     margin: 4rem auto;
   }
 
@@ -694,11 +696,11 @@ footer a {
     width: 90%;
   }
 
-  .mainAbout .firstProject .imgDiv {
+  .mainAbout .projects .imgDiv {
     margin: 3rem auto;
   }
 
-  .mainAbout .projects .imgDiv {
+  .mainAbout .projectTwo .imgDiv {
     margin: 6rem auto;
   }
 
@@ -743,17 +745,37 @@ footer a {
     width: 60%;
   }
 
-  .mainAbout .firstProject .imgDiv {
+  .mainAbout .projects .imgDiv {
     margin: 5rem auto;
   }
 
-  .mainAbout .projects .imgDiv {
+  .mainAbout .projectTwo .imgDiv {
     margin: 10rem auto;
   }
 }
 @media (max-width: 435px) {
-  .mainAbout .projects .imgDiv {
+  .aboutHeader {
+    height: 100%;
+  }
+
+  .mainAbout .paraDiv {
+    padding-top: 2rem;
+  }
+
+  .mainAbout .projectTwo .imgDiv {
     margin: 12rem auto;
+  }
+
+  .mainAbout {
+    padding-top: 0;
+  }
+
+  .mainAbout .hDiv {
+    padding-top: 0;
+  }
+
+  .mainAbout .projects .imgDiv {
+    margin: 6rem auto;
   }
 }
 @-webkit-keyframes square {
