--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -380,4 +380,8 @@ footer {
    .mainAbout .projects .imgDiv {
       margin: 6rem auto;
    }
+
+   .mainAbout .smallScreen .imgDiv {
+      margin: 8rem auto;
+   }
 }
