--- a/styles/sass/partials/_animations.scss
+++ b/styles/sass/partials/_animations.scss
@@ -198,3 +198,15 @@
       height: 0.5rem;
    }
 }
+
+@keyframes bounce {
+   0% {
+      transform: translateY(0);
+   }
+   50% {
+      transform: translateY(-2rem);
+   }
+   100% {
+      transform: translateY(0);
+   }
+}
