--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -5,10 +5,13 @@
    .bio {
       display: flex;
       flex-wrap: wrap;
-      margin: 2rem;
+      justify-content: space-evenly;
+      margin: 3rem auto;
 
       .bioImg {
-         width: 55%;
+         display: flex;
+         align-items: center;
+         width: 35%;
 
          img {
             width: 100%;
@@ -16,122 +19,145 @@
       }
 
       .bioAboutMe {
-         width: 35%;
+         width: 45%;
 
          p {
             color: $gray;
-            line-height: 25px;
-            margin: 0;
+            line-height: 1.3rem;
+            margin: 0 0 0.6rem 0;
          }
       }
    }
 
-   // .icons {
-   //    display: flex;
-      
-   //    ul {
-   //       display: flex;
-   //       margin: 0 auto;
+   .arrow {
+      display: flex;
+      justify-content: center;
+      padding: 3rem 0 4rem 0;
 
-   //       li {
-   //          font-size: 1.5rem;
-   //          padding-right: 2rem;
-   //       }
-   //    }
-   // }
-
-   .verticalAbout {
-      writing-mode: vertical-rl;
-      color: #fdee69;
-      letter-spacing: 0.5rem;
-      margin: 1.4rem;
+      a {
+         font-size: 2.5em;
+         color: $yellow;
+         animation: bounce 1s ease-in infinite;
+      }
    }
 }
 
 // Main section for about.html
 .mainAbout {
-   padding-top: 5rem;
+   padding-top: 1rem;
+
+   h2 {
+      font-size: 2.5rem;
+      letter-spacing: 0.5rem;
+      text-align: center;
+   }
 
    section {
-      height: 30rem;
       display: flex;
       flex-wrap: wrap;
-      margin-bottom: 2rem;
+   }
+
+   .space {
+      padding-top: 2rem;
    }
 
    .projects {
-      margin-bottom: 0;
+      justify-content: space-between;
+      margin-bottom: 4rem;
+      margin-left: 2rem;
    }
 
-   .hDiv {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      height: 2rem;
-      padding-top: 4rem;
-      padding-left: 5rem;
+   .icons {
+      margin: 3rem 0 7rem 0;
+      
+      ul {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: center;
+         margin: 0 auto;
+         padding: 0;
+
+         li {
+            width: 7rem;
+            text-align: center;
+            padding: 1rem 0;
+
+            i {
+               font-size: 2rem;
+            }
+         
+            p {
+               font-size: 1rem;
+               color: $gray;
+            }
+         }
+      }
+   }
+
+   .wholeText {
+      width: 45%;
 
       h3 {
-         font-size: 3rem;
          margin: 0;
       }
 
-      .paraContainer {
-         height: 3rem;
-         padding-top: 0.5rem;
-         padding-left: 0.5rem;
-
-         .projectTitle,
-         .programs {
-            margin: 0;
-         }
-
-         .programs {
-            color: $gray;
-         }
-      }
-   }
-
-   .summary {
-      width: 75%;
-      margin: 0 auto;
-   }
-
-   .paraDiv {
-      color: $gray;
-      width: 45%;
-      height: 15rem;
-      padding-top: 2rem;
-      padding-left: 6.5rem;
-
       p {
-         line-height: 25px;
+         color: $gray;
       }
 
-      a {
-         display: flex;
-         text-decoration: none;
-         margin-top: 2rem;
+      .paraContainer p {
+         margin: 0;
+      }
 
-         i {
-            color: $green;
-         }
+      .one::before {
+         @include before("1");
+      }
 
+      .two::before {
+         @include before("2");
+      }
+
+      .three::before {
+         @include before("3");
+      }
+
+      .four::before {
+         @include before("4");
+      }
+
+      .five::before {
+         @include before("5");
+      }
+
+      .paraDiv {
          p {
-            text-decoration: none;
-            color: $yellow;
-            margin: 0;
-            padding-left: 1rem;
+            line-height: 1.3rem;
+         }
+
+         .externalLink {
+            margin-top: 2rem;
+
+            a {
+               text-decoration: none;
+               color: $yellow;
+               font-size: 2rem;
+               margin-right: 3rem;
+            }
+
+            a:hover,
+            a:focus {
+               color: $green;
+               font-size: 2.5rem;
+            }
          }
       }
+      
    }
 
    .imgDiv {
+      display: flex;
+      align-items: center;
       width: 45%;
-      position: relative;
-      left: 1rem;
-      bottom: 3rem;
-      padding-left: 2rem;
 
       img {
          width: 100%;
@@ -154,234 +180,95 @@ footer {
       color: $yellow;
       text-decoration: none;
    }
+
+   a:hover, 
+   a:focus {
+      color: $green;
+      font-size: 2rem;
+      position: relative;
+      bottom: 1rem;
+   }
 }
 
 // Media queries
-@media (max-width: 1300px) {
-   .aboutHeader .bio {
-      margin: 2rem 0;
-   }
-
-   .mainAbout .paraDiv {
-      padding-top: 0;
-      width: 50%;
-   }
-}
-
-@media (max-width: 1100px) {
-   .opacity {
-      opacity: 0;
-      font-size: 1px;
-   }
-
-   .aboutHeader .verticalAbout {
-      letter-spacing: 2px;
-      margin: 0%;
-   }
-
-   .mainAbout .imgDiv {
-      padding-left: 0;
-   }
-
-   .wrapper {
-      width: 95%;
-   }
-}
-
-@media (max-width: 1040px) {
-   .aboutHeader .bio {
-      flex-direction: column;
-   }
-
-   .aboutHeader .bio .bioImg {
-      width: 60%;
-      margin: 0 auto;
-   }
-
-   .aboutHeader .bio .bioAboutMe {
-      width: 50%;
-      margin: 0 auto;
-   }
-
-   .verticalAbout {
-      opacity: 0;
-      font-size: 1px;
-   }
-
-   .mainAbout {
-      padding-bottom: 4rem;
-   }
-
-   .mainAbout .paraDiv {
-      width: 80%;
-      padding-top: 4rem;
-      padding-left: 7rem;
-      margin-bottom: 1rem;
-   }
-
-   .mainAbout .imgDiv {
-      width: 50%;
-      margin: 0 auto;
-   }
-
-   .mainAbout .projects {
-      margin-bottom: 5rem;
-   }
-
-   .mainAbout .projects .imgDiv {
-      margin: 3rem auto;
-   }
-
-   .mainAbout .projectTwo {
-      margin-bottom: 7rem;
-   }
-
-   .mainAbout .projectTwo .imgDiv {
-      margin: 5rem auto;
-   }
-}
-
-@media (max-width: 888px) {
-   .aboutHeader .bio .bioImg {
-      width: 65%;
-   }
-
-   .aboutHeader .bio .bioAboutMe {
-      width: 70%;
-   }
-
-   .mainAbout {
-      padding-top: 3rem;
-   }
-
-   .mainAbout .paraDiv {
-      width: 90%;
-   }
-
-   .mainAbout .imgDiv {
-      width: 60%;
-      bottom: 1rem;
-   }
-
-   .mainAbout .projectTwo .imgDiv {
-      margin: 7rem auto;
-   }
-
-   .mainAbout .projects .imgDiv {
-      margin: 2rem auto;
-   }
-}
-
-@media (max-width: 750px) {
-   .mainAbout .paraDiv {
-      width: 100%;
-      padding-left: 5rem;
-   }
-
-   .mainAbout .projects .imgDiv {
-      margin: 0rem auto;
-   }
-
-   .mainAbout .projectTwo .imgDiv {
-      margin: 4rem auto;
-   }
-
-   footer {
-      font-size: 1rem;
-   }
-}
-
-@media (max-width: 636px) {
-   .aboutHeader .bio .bioImg {
-      width: 80%;
-   }
-
-   .aboutHeader .bio .bioAboutMe {
-      width: 90%;
-   }
-
-   .mainAbout .projects .imgDiv {
-      margin: 3rem auto;
-   }
-
-   .mainAbout .projectTwo .imgDiv {
-      margin: 6rem auto;
-   }
-
-   footer {
-      text-align: center;
-      flex-direction: column;
-   }
-}
-
-@media (max-width: 565px) {
-    .aboutHeader .bio .bioImg {
-      width: 100%;
-   }
-
-   .aboutHeader .bio .bioAboutMe {
-      width: 95%;
-   }
-
-   .mainAbout section {
-      position: relative;
-      left: -2rem;
-   }
-
-   .mainAbout .hDiv h3 {
-      opacity: 0;
-      font-size: 1px;
-   }
-
-   .mainAbout .hDiv .paraContainer {
-      padding-left: 0rem;
-      position: relative;
-      left: -2rem;
-   }
-
-   .mainAbout .paraDiv {
-      padding-left: 3rem;
-   }
-
-   .mainAbout .imgDiv {
-      width: 60%;    
-   }
-
-   .mainAbout .projects .imgDiv {
-      margin: 5rem auto;
-   }
-
-   .mainAbout .projectTwo .imgDiv {
-      margin: 10rem auto;
-   }
-}
-
-@media (max-width: 435px) {
+@media (max-width: 900px) {
    .aboutHeader {
       height: 100%;
-   }
 
-   .mainAbout .paraDiv {
-      padding-top: 2rem;
-   }
+      .bio {
+         flex-direction: column;
+         align-items: center;
 
-   .mainAbout .projectTwo .imgDiv {
-      margin: 12rem auto;
+         .bioImg {
+            width: 60%;
+         }
+
+         .bioAboutMe {
+            width: 80%;
+         }
+      }
    }
 
    .mainAbout {
-      padding-top: 0;
+      .projects {
+         flex-direction: column;
+         justify-content: center;
+         margin-bottom: 0;
+      }
+
+      .space {
+         padding-top: 0;
+      }
+
+      .wholeText {
+         width: 100%;
+      }
+
+      .imgDiv {
+         width: 85%;
+         margin: 0 auto;
+      }
    }
 
-   .mainAbout .hDiv {
-      padding-top: 0;
-   }
+   footer {
+      flex-direction: column;
+      text-align: center;
 
-   .mainAbout .projects .imgDiv {
-      margin: 6rem auto;
-   }
+      p {
+         margin: 0;
+      }
 
-   .mainAbout .smallScreen .imgDiv {
-      margin: 8rem auto;
+      a {
+         margin: 1rem;
+      }
    }
 }
+
+@media (max-width: 676px) {
+   .mainAbout .icons ul li {
+      width: 5rem;
+   }
+}
+
+@media (max-width: 600px) {
+   .aboutHeader {
+      .bio {
+         .bioImg,
+         .bioAboutMe {
+            width: 100%;
+         }
+      }
+   }
+
+   .mainAbout .imgDiv {
+      width: 100%;
+   }
+}
+
+@media (max-width: 520px) {
+   footer {
+      font-size: 1.3rem;
+   }
+}
+
+
