--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -8,6 +8,11 @@ nav {
       margin-top: 2rem;
    }
 
+   img:hover,
+   img:focus {
+      transform: rotate(45deg);
+   }
+
    ul {
       display: flex;
       margin: 2rem 0 0 0;
@@ -15,6 +20,12 @@ nav {
       a {
          color: $yellow;
          margin-left: 2.5rem;
+      }
+
+      a:hover,
+      a:focus {
+         color: $green;
+         font-size: 1.5rem;
       }
    }
 }
