--- a/styles/sass/partials/_mainAbout.scss
+++ b/styles/sass/partials/_mainAbout.scss
@@ -34,10 +34,11 @@
       justify-content: center;
       padding: 3rem 0 4rem 0;
 
-      a {
+      i {
          font-size: 2.5em;
          color: $yellow;
          animation: bounce 1s ease-in infinite;
+         text-shadow: 0px 5px 7px gray;
       }
    }
 }
