--- a/styles/styles.css
+++ b/styles/styles.css
@@ -477,11 +477,12 @@ nav ul a:focus {
           justify-content: center;
   padding: 3rem 0 4rem 0;
 }
-.aboutHeader .arrow a {
+.aboutHeader .arrow i {
   font-size: 2.5em;
   color: #ffe400;
   -webkit-animation: bounce 1s ease-in infinite;
           animation: bounce 1s ease-in infinite;
+  text-shadow: 0px 5px 7px gray;
 }
 
 .mainAbout {
