--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -154,13 +154,21 @@
 @media (max-width: 640px) {
    .indexHeader .helloDiv {
       h1 {
-         padding: 5rem 3rem 0 3rem;
+         padding: 7rem 3rem 0 3rem;
       }
+
       .shapes {
          width: 50%;
       }
+   }
+   .indexHeader {
       .seeWork {
-         width: 75%;
+         width: 100%;
+         margin: 5rem auto;
+      }
+
+      .omit {
+         display: none;
       }
    }
 }
@@ -168,8 +176,9 @@
 @media (max-width: 450px) {
    .indexHeader .helloDiv {
       h1 {
-         padding: 5rem 1rem 0 1rem;
+         padding: 7rem 1rem 0 1rem;
       }
+      
       .shapes {
          width: 70%;
       }
